monitoring llm-cosine-similarity-2

--- a/04-monitoring/Monitoring.ipynb
+++ b/04-monitoring/Monitoring.ipynb
@@ -9,29 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df_ground_truth = pd.read_csv('ground-truth-data.csv')\n",
+    "df_ground_truth = df_ground_truth[df_ground_truth.course == 'machine-learning-zoomcamp']\n",
     "ground_truth = df_ground_truth.to_dict(orient='records')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'question': 'Can I enroll in the course after it starts?',\n",
-       " 'course': 'data-engineering-zoomcamp',\n",
-       " 'document': '7842b56a'}"
+       "{'question': 'Are sessions recorded if I miss one?',\n",
+       " 'course': 'machine-learning-zoomcamp',\n",
+       " 'document': '5170565b'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
        "'machine-learning-zoomcamp'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
        "384"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +147,7 @@
        " 'id': '1f6520ca'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +174,7 @@
        "ObjectApiResponse({'name': 'b8d182300f91', 'cluster_name': 'docker-cluster', 'cluster_uuid': '_3--bU5ORBmSPSTkZjsNsw', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +266,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 948/948 [00:58<00:00, 16.29it/s]\n"
+      "  0%|          | 0/948 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 948/948 [00:59<00:00, 16.01it/s]\n"
      ]
     }
    ],
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -351,16 +359,6 @@
        "  'section': 'General course-related questions',\n",
        "  'text': 'Everything is recorded, so you won’t miss anything. You will be able to ask your questions for office hours in advance and we will cover them during the live stream. Also, you can always ask questions in Slack.',\n",
        "  'id': '5170565b'},\n",
-       " {'question': 'What if I miss a session?',\n",
-       "  'course': 'machine-learning-zoomcamp',\n",
-       "  'section': 'General course-related questions',\n",
-       "  'text': 'Everything is recorded, so you won’t miss anything. You will be able to ask your questions for office hours in advance and we will cover them during the live stream. Also, you can always ask questions in Slack.',\n",
-       "  'id': '5170565b'},\n",
-       " {'question': 'Useful Resource for Missing Data Treatment\\nhttps://www.kaggle.com/code/parulpandey/a-guide-to-handling-missing-values-in-python/notebook',\n",
-       "  'course': 'machine-learning-zoomcamp',\n",
-       "  'section': '2. Machine Learning for Regression',\n",
-       "  'text': '(Hrithik Kumar Advani)',\n",
-       "  'id': '81b8e8d0'},\n",
        " {'question': 'Useful Resource for Missing Data Treatment\\nhttps://www.kaggle.com/code/parulpandey/a-guide-to-handling-missing-values-in-python/notebook',\n",
        "  'course': 'machine-learning-zoomcamp',\n",
        "  'section': '2. Machine Learning for Regression',\n",
@@ -370,10 +368,20 @@
        "  'course': 'machine-learning-zoomcamp',\n",
        "  'section': 'General course-related questions',\n",
        "  'text': 'The course videos are pre-recorded, you can start watching the course right now.\\nWe will also occasionally have office hours - live sessions where we will answer your questions. The office hours sessions are recorded too.\\nYou can see the office hours as well as the pre-recorded course videos in the course playlist on YouTube.',\n",
-       "  'id': '39fda9f0'}]"
+       "  'id': '39fda9f0'},\n",
+       " {'question': 'Will I get a certificate if I missed the midterm project?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'text': \"Yes, it's possible. See the previous answer.\",\n",
+       "  'id': '1d644223'},\n",
+       " {'question': 'What are the project deadlines?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'section': 'Projects (Midterm and Capstone)',\n",
+       "  'text': 'Answer: You can see them here (it’s taken from the 2022 cohort page). Go to the cohort folder for your own cohort’s deadline.',\n",
+       "  'id': '9ffacaac'}]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,23 +427,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "# gets API Key from environment variable OPENAI_API_KEY\n",
-    "client = OpenAI(\n",
-    "  base_url=\"https://openrouter.ai/api/v1\",\n",
-    "  api_key=\"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\",\n",
-    ")\n",
+    "\n",
+    "\n",
+    "client = OpenAI(api_key=openai_api_key)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,48 +474,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Yes, all sessions are recorded, so if you miss one, you won't miss anything important. You can also ask questions in advance for office hours, which will be covered during the live stream.\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "response = es_client.search(\n",
-    "    index=index_name,\n",
-    "    query={\n",
-    "        \"match\": {\"section\": \"General course-related questions\"},\n",
-    "    },\n",
-    "    knn=knn_query,\n",
-    "    size=5\n",
-    ")"
+    "rag(ground_truth[10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Everything is recorded, so you won’t miss anything. You will be able to ask your questions for office hours in advance and we will cover them during the live stream. Also, you can always ask questions in Slack.'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc_idx['5170565b']['text']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cosine Similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1830/1830 [37:03<00:00,  1.22s/it] \n"
+     ]
+    }
+   ],
+   "source": [
+    "answers = {}\n",
+    "for i, rec in enumerate(tqdm(ground_truth)) :\n",
+    "    if i in answers: \n",
+    "        continue\n",
+    "    answer_llm = rag(rec)\n",
+    "    doc_id = rec['document']\n",
+    "    answer_orig = doc_idx[doc_id]['text'] \n",
+    "    answers[i]= {\n",
+    "        'answer_llm' : answer_llm,\n",
+    "        'answer_orignal': answer_orig,\n",
+    "        'document':  doc_id\n",
+    "        }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response[\"hits\"][\"hits\"]"
+    "result_gpt_4 = pd.DataFrame(answers.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_gpt_4.to_csv(\"gtp4_dataframe\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_gpt_4 = [None] * len(ground_truth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, val in answers.items():\n",
+    "    result_gpt_4[i] = val.copy()\n",
+    "    result_gpt_4[i].update(ground_truth[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'answer_llm': 'You can sign up for the course \"Machine Learning Zoomcamp\" by visiting the course page at http://mlzoomcamp.com/.',\n",
+       " 'answer_orignal': 'Machine Learning Zoomcamp FAQ\\nThe purpose of this document is to capture frequently asked technical questions.\\nWe did this for our data engineering course and it worked quite well. Check this document for inspiration on how to structure your questions and answers:\\nData Engineering Zoomcamp FAQ\\nIn the course GitHub repository there’s a link. Here it is: https://airtable.com/shryxwLd0COOEaqXo\\nwork',\n",
+       " 'document': '0227b872',\n",
+       " 'question': 'Where can I sign up for the course?',\n",
+       " 'course': 'machine-learning-zoomcamp'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_gpt_4[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### References"
+    "### Evaluating GPT4-o-mino"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "1. https://logz.io/blog/elasticsearch-mapping/#:~:text=Within%20a%20search%20engine%2C%20mapping,indexes%20and%20stores%20its%20fields\n",
-    "\n",
-    "2. https://www.sbert.net/docs/sentence_transformer/pretrained_models.html\n",
-    "\n",
-    "3. https://www.elastic.co/search-labs/tutorials\n",
-    "\n",
-    "4. https://www.elastic.co/search-labs/blog/text-similarity-search-with-vectors-in-elasticsearch"
-   ]
+   "source": []
   }
  ],
  "metadata": {
