monitoring llm-cosine-similarity-2

--- a/04-monitoring/Monitoring.ipynb
+++ b/04-monitoring/Monitoring.ipynb
@@ -435,7 +435,7 @@
     "\n",
     "\n",
     "\n",
-    "client = OpenAI(api_key=openai_api_key)\n",
+    "client = OpenAI(api_key=\"enter your key\")\n",
     "\n",
     "\n"
    ]
